--- a/projeto/pginicial.html
+++ b/projeto/pginicial.html
@@ -54,7 +54,7 @@
     <main>
         <h1><strong>Super Site</strong> <br>
         Geo + Dêssa</h1>
-        <p>Criado com muito amor e <strong>paciência </strong> <br>
+        <p>Criado com muito amor e <strong> muita paciência </strong> <br>
             Dediquei meu coração e minha alma nisso, seja gentil!</p>
         <button>
             <a href="msg-erro/msg-erro.html">Ver presente</a>
