--- a/projeto/msg-erro/msg-erro.html
+++ b/projeto/msg-erro/msg-erro.html
@@ -3,36 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ops algo deu errado</title>
     <link rel="stylesheet" href="msg-erro.css">
 </head>
 <body>
-    <section>
+    <section class="cont1">
         <div id="img1">
-            <img src="imagens/514c7f28-8aa6-438f-ac25-f5bd8022ae76.png" alt="">
+            <img src="imagens/imagem01.png" alt="">
         </div>
 
         <div class="msg">
-
+           <p>Ops acho que deu alguma coisa errada! Foi mal ai dê. <br> Mas é claro que um presente meu não seria tão fácil de receber assim né!</p> 
         </div>
     </section>
-    <section>
-        <div id="img2">
-
+    <section class="cont2" class="img">
+        <div id="img2" class="img">
+            <img src="imagens/imagem02.png" alt="">
         </div> 
-
-        <div class="msg2">
-
+            
+        <div class="msg">
+            <p>e pelo que eu estou vendo aqui nos arqivos, você tem que fazer uma prova simple para receber seu presente. <br> Desculpa ai, são as regras.</p>
         </div>
     </section>
-    <section>
-        <div id="img3">
-
+    <section class="cont3">
+        <div id="img3" class="img">
+            <img src="imagens/imagem03.png" alt="">
         </div>
 
-        <div class="msg3">
-
+        <div class="msg">
+            <p>Calma, não precisa me xingar ainda não (apesar de eu achar fofinho kkk), basta você clicar nesse botão, e responder algumas perguntas para que você consiga seu presente. <br> <strong>Boa sorte meu amor</strong></p>
         </div>
+        <button>
+            <a href="../quiz/quiz1.html">Responder prova</a>
+        </button>
     </section>
 </body>
 </html>
