--- a/projeto-2-anos-com-voce/pagina1/pg01.html
+++ b/projeto-2-anos-com-voce/pagina1/pg01.html
@@ -13,7 +13,8 @@
         <p>Criado com muito amor e <strong>muita paciência.</strong> <br>
         Seja Gentil</p>
          
-        <a href="../pagina2-erro/pg02.html"><button>Ver seu Presente</button></a>
+        <a href="#"><button id="but">Ver seu Presente</button></a>
     </main>
+    <script src="main01.js"></script>
 </body>
 </html>
