--- a/projeto-2-anos-com-voce/pagina1/pg01.html
+++ b/projeto-2-anos-com-voce/pagina1/pg01.html
@@ -13,8 +13,26 @@
         <p>Criado com muito amor e <strong>muita paciência.</strong> <br>
         Seja Gentil</p>
          
-        <a href="#"><button id="but">Ver seu Presente</button></a>
+        <button id="but">Ver seu Presente</button>
     </main>
+    <div id="login">
+        <h2>Espera, não tão rápido</h2>
+        <p>Antes de você ver seu presente, você precisa fazer login com seu email e senha! <strong>Volte no seu papel com o codigo QR</strong>, la estará seu email e senha!</p>
+        <h4>Faça Login</h4>
+        <div>
+            <input type="text" name="nome" id="nome" placeholder="Seu nome">
+        </div>
+        <div>
+            <input type="email" name="email" id="email" placeholder="email">
+        </div>
+        <div>
+            <input type="password" name="senha" id="senha" placeholder="Senha">
+        </div>
+        <div>
+            <button>Entrar</button>
+        </div>
+    </div>
+
     <script src="main01.js"></script>
 </body>
 </html>
