terminado a página inicia, agora entramos na construção do quiz

--- a/projeto-2-anos-com-voce/pagina-inicial/pg01.html
+++ b/projeto-2-anos-com-voce/pagina-inicial/pg01.html
@@ -28,6 +28,7 @@
         <div>
             <input type="password" name="senha" id="senha" placeholder="Senha">
         </div>
+        <p id="msgerro"></p>
         <div>
             <button>Entrar</button>
         </div>
