--- a/projeto-2-anos-com-voce/quiz/layout.html
+++ b/projeto-2-anos-com-voce/quiz/layout.html
@@ -4,8 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Teste do Amor</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <p>espere</p>
+    <main>
+        <div id="number">
+            
+        </div>
+        <h1 id="enunciado">
+        
+        </h1>
+        <aside class="alternativa"><strong></strong> </aside>
+        <aside class="alternativa"><strong></strong> </aside>
+        <aside class="alternativa"><strong></strong> </aside>
+        <aside class="alternativa"><strong></strong> </aside>
+        <aside class="alternativa"><strong></strong> </aside>
+    </main>
+    <script type="module" src="index.js"></script>
 </body>
 </html>
