--- a/projeto-2-anos-com-voce/Repositorio de Lembrancas/index.html
+++ b/projeto-2-anos-com-voce/Repositorio de Lembrancas/index.html
@@ -108,7 +108,7 @@
         </div>
     </article>
     <section>
-        <h1>ola</h1>
+        <h1>ola minha vida amor da minha vida, gostosa</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe optio, modi, eos beatae temporibus reiciendis corporis tenetur iusto nostrum deleniti totam illum vitae ipsam molestiae similique esse accusamus corrupti adipisci!</p>
 
         <div class="img">
@@ -116,7 +116,7 @@
         </div>
     </section>
     <footer>
-        <p>ola</p>
+        <p>Feito com todo o coração, de Geovane para sua futura esposa</p>
     </footer>
 </body>
 </html>
