começo das imagens

--- a/projeto-2-anos-com-voce/Repositorio de Lembrancas/index.html
+++ b/projeto-2-anos-com-voce/Repositorio de Lembrancas/index.html
@@ -57,39 +57,48 @@
         <button class="butVer">Ver</button>
         <div class="carroseis">
             <aside>
-                <h3>Datas Comemorativas</h3>
+                <h3>Começa a Ficar</h3>
+                <p>Aqui é o começo, frio na barriga. Não sabiamos o que falar, lembra? Nossas conversas eram basicamente "O dia ta bonito né?"  e o outro respondia "é" kkkk.</p>
                 <div class="content">
-                    <div class="carrossel">
-                        <div class="card"></div>
-                        <div class="card"></div>
-                        <div class="card"></div>
-                        <div class="card"></div>
-                        <div class="card"></div>
+                    <div class="carrossel" id="car01">
+                        <div class="card"><img src="imagens/imgsCategorias/EstamosFicando/img01.jpeg" alt=""></div>
+                        <div class="card"><img src="imagens/imgsCategorias/EstamosFicando/img02.jpeg" alt=""></div>
+                        <div class="card"><img src="imagens/imgsCategorias/EstamosFicando/img03.jpeg" alt=""></div>
+                        <div class="card"><img src="imagens/imgsCategorias/EstamosFicando/img04.jpeg" alt=""></div>
+                        <div class="card"><img src="imagens/imgsCategorias/EstamosFicando/img05.jpeg" alt=""></div>
                     </div>
                 </div>
             </aside>
             <aside>
-                <h3>Formatura</h3>
+                <h3>Pedido de Namoro</h3>
+                <p>Esse dia meu deus do céu, nunca fiquei tão nervoso, e nem é bom lembrar como eu ia passar pelo portão da tua casa kkkk.</p>
                 <div class="content">
                     <div class="carrossel">
-                        <div class="card"></div>
-                        <div class="card"></div>
-                        <div class="card"></div>
-                        <div class="card"></div>
-                        <div class="card"></div>
+                        <div class="card"><img src="imagens/imgsCategorias/PedidoDeNamoro/img01.jpeg" alt=""></div>
+                        <div class="card"><img src="imagens/imgsCategorias/PedidoDeNamoro/img02.jpeg" alt=""></div>
+                        <div class="card"><img src="imagens/imgsCategorias/PedidoDeNamoro/img03.jpeg" alt=""></div>
+                        <div class="card" style="width: 200px;"><img src="imagens/imgsCategorias/PedidoDeNamoro/img04.jpeg" alt=""></div>
+                        <div class="card"><img src="imagens/imgsCategorias/PedidoDeNamoro/img05.jpeg" alt=""></div>
+                        <div class="card"><img src="imagens/imgsCategorias/PedidoDeNamoro/img06.jpeg" alt=""></div>
+                        <div class="card"><img src="imagens/imgsCategorias/PedidoDeNamoro/img07.jpeg" alt=""></div>
+                        <div class="card"><img src="imagens/imgsCategorias/PedidoDeNamoro/img08.jpeg" alt=""></div>
 
                     </div>
                 </div>
             </aside>
             <aside>
-                <h3>Nossas Bestajadas</h3>
+                <h3>Corpus Crist</h3>
+                <p>Primeiro Corpus Crist que passamos juntos como casal nossa, melhor dia de todos, apesar de algumas brigas, foi maravilhoso passar o dia todo junto contigo, e voltar todo queimado de sol kkk.</p>
                 <div class="content">
                     <div class="carrossel">
-                        <div class="card"></div>
-                        <div class="card"></div>
-                        <div class="card"></div>
-                        <div class="card"></div>
-                        <div class="card"></div>
+                        <div class="card"><img src="imagens/imgsCategorias/CorpusCrist/img01.jpeg" alt=""></div>
+                        <div class="card"><img src="imagens/imgsCategorias/CorpusCrist/img02.jpeg" alt=""></div>
+                        <div class="card"><img src="imagens/imgsCategorias/CorpusCrist/img03.jpeg" alt=""></div>
+                        <div class="card"><img src="imagens/imgsCategorias/CorpusCrist/img04.jpeg" alt=""></div>
+                        <div class="card"><img src="imagens/imgsCategorias/CorpusCrist/img05.jpeg" alt=""></div>
+                        <div class="card"><img src="imagens/imgsCategorias/CorpusCrist/img06.jpeg" alt=""></div>
+                        <div class="card"><img src="imagens/imgsCategorias/CorpusCrist/img07.jpeg" alt=""></div>
+                        
                     </div>
                 </div>
             </aside>
@@ -110,7 +119,7 @@
     <section>
         <h1>É isso minha princesa</h1>
 
-        <p>Meu amor, que essa lembrancinha seja um pedacinho do meu carinho para você ter sempre com você, e poder relembrar nossos primeiros 2 anos juntos. Cada momento ao seu lado, é um presente que guardo no coração, e espero que, mesmo estando longe, você se lembre do quanto eu te amo e te quero mais que tudo. Obrigado por ser meu norte durante esse pouco tempo que estive ao seu lado e por me transformar em um homem e uma pessoa melhor. Não sei o que a vida guarda para nós dois a partir daqui, mas espero ter você ao meu lado para sempre. Conte comigo para tudo. <strong>Eu te amo</strong>.
+        <p>Meu amor, que essa lembrancinha seja um pedacinho do meu carinho para você ter sempre contigo, e poder relembrar nossos primeiros 2 anos juntos. Cada momento ao seu lado, é um presente que guardo no coração, e espero que, mesmo estando longe, você se lembre do quanto eu te amo e te quero mais que tudo. Obrigado por ser meu norte durante esse pouco tempo que estive ao seu lado e por me transformar em um homem e uma pessoa melhor. Não sei o que a vida guarda para nós dois a partir daqui, mas espero ter você ao meu lado para sempre. Conte comigo para tudo. <strong>Eu te amo</strong>.
         </p>
 
         <div class="img" >
