--- a/projeto-2-anos-com-voce/Repositorio de Lembrancas/index.html
+++ b/projeto-2-anos-com-voce/Repositorio de Lembrancas/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Repositório de Lembranças</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="../icon/heart_crown_princess_emoji_emo_icon_131636.ico" type="image/x-icon">
 </head>
 <body>
     
@@ -49,77 +50,112 @@
     </article>
     <main class="melhores-momentos">
         <h1>Melhores Momentos com Meu Amor</h1>
+        <p> Sabe, quando a gente vive um momento especial, ele parece infinito. Mas o tempo é rápido, e por isso guardar cada pedacinho se torna tão valioso.  
+        Aqui estão nossas lembranças mais preciosas  
+        Passeando por essas imagens, a gente revive cada capítulo da nossa história: o nervosismo do primeiro encontro, a emoção do pedido de namoro, os dias ensolarados e até aqueles nublados que se tornaram lindos só porque estávamos juntos.  
+        Este não é apenas um álbum. É um pedaço vivo de nós, para lembrar que o amor que construímos é feito de momentos simples, mas eternos. E que ainda temos muitos outros capítulos para escrever e fotografar.
+    </p></p>
 
-        <p>Depois de tanto tempo, claro que juntariamos muitas lembrnaças, e é disso que se trata esse site. Nossos melhores moemntos juntos.</p>
-        <br>
-        <p>Ao clicar no botão "ver", você tera um compilado com nossas melhores fotos, dos momentos que fomos mais felizes juntos. Mas assim... eu tentei pegar as melhores, porêm a gente so tira foto zoada kkkk, então essa vai ser as piores fotos dos nossos melhores momentos</p>
-
-        <button class="butVer">Ver</button>
         <div class="carroseis">
-            <aside>
-                <h3>Começa a Ficar</h3>
-                <p>Aqui é o começo, frio na barriga. Não sabiamos o que falar, lembra? Nossas conversas eram basicamente "O dia ta bonito né?"  e o outro respondia "é" kkkk.</p>
-                <div class="content">
-                    <div class="carrossel" id="car01">
-                        <div class="card"><img src="imagens/imgsCategorias/EstamosFicando/img01.jpeg" alt=""></div>
-                        <div class="card"><img src="imagens/imgsCategorias/EstamosFicando/img02.jpeg" alt=""></div>
-                        <div class="card"><img src="imagens/imgsCategorias/EstamosFicando/img03.jpeg" alt=""></div>
-                        <div class="card"><img src="imagens/imgsCategorias/EstamosFicando/img04.jpeg" alt=""></div>
-                        <div class="card"><img src="imagens/imgsCategorias/EstamosFicando/img05.jpeg" alt=""></div>
-                    </div>
+        <aside>
+            <h3>Começo de Tudo</h3>
+            <p>No início era tudo novidade. Aquele frio na barriga, as palavras presas na garganta e as conversas sem graça: “O dia tá bonito, né?”, “É…” (hoje, até de bosta fala) kkkk.</p>
+            <div class="content">
+                <div class="carrossel" id="car01">
+                    <div class="card"><img src="imagens/imgsCategorias/EstamosFicando/img01.jpeg" alt=""></div>
+                    <div class="card"><img src="imagens/imgsCategorias/EstamosFicando/img02.jpeg" alt=""></div>
+                    <div class="card"><img src="imagens/imgsCategorias/EstamosFicando/img03.jpeg" alt=""></div>
+                    <div class="card"><img src="imagens/imgsCategorias/EstamosFicando/img04.jpeg" alt=""></div>
+                    <div class="card"><img src="imagens/imgsCategorias/EstamosFicando/img05.jpeg" alt=""></div>
                 </div>
-            </aside>
-            <aside>
-                <h3>Pedido de Namoro</h3>
-                <p>Esse dia meu deus do céu, nunca fiquei tão nervoso, e nem é bom lembrar como eu ia passar pelo portão da tua casa kkkk.</p>
-                <div class="content">
-                    <div class="carrossel">
-                        <div class="card"><img src="imagens/imgsCategorias/PedidoDeNamoro/img01.jpeg" alt=""></div>
-                        <div class="card"><img src="imagens/imgsCategorias/PedidoDeNamoro/img02.jpeg" alt=""></div>
-                        <div class="card"><img src="imagens/imgsCategorias/PedidoDeNamoro/img03.jpeg" alt=""></div>
-                        <div class="card" style="width: 200px;"><img src="imagens/imgsCategorias/PedidoDeNamoro/img04.jpeg" alt=""></div>
-                        <div class="card"><img src="imagens/imgsCategorias/PedidoDeNamoro/img05.jpeg" alt=""></div>
-                        <div class="card"><img src="imagens/imgsCategorias/PedidoDeNamoro/img06.jpeg" alt=""></div>
-                        <div class="card"><img src="imagens/imgsCategorias/PedidoDeNamoro/img07.jpeg" alt=""></div>
-                        <div class="card"><img src="imagens/imgsCategorias/PedidoDeNamoro/img08.jpeg" alt=""></div>
+            </div>
+        </aside>
 
-                    </div>
+        <aside>
+            <h3>O Pedido</h3>
+            <p>Meu Deus… que dia! Eu nunca estive tão nervoso. Meu coração parecia que ia sair correndo antes de mim. E, para completar, tinha o desafio de passar pelo portão da sua casa (pq eu fui perguntar se era pra pular? mdss). Mas no fim, tudo valeu a pena, porque naquele momento eu tive certeza que a gente não iria conseguir esperar ate novembro pra falar com teus pais kkkk.</p>
+            <div class="content">
+                <div class="carrossel">
+                    <div class="card"><img src="imagens/imgsCategorias/PedidoDeNamoro/img01.jpeg" alt=""></div>
+                    <div class="card"><img src="imagens/imgsCategorias/PedidoDeNamoro/img02.jpeg" alt=""></div>
+                    <div class="card"><img src="imagens/imgsCategorias/PedidoDeNamoro/img03.jpeg" alt=""></div>
+                    <div class="card" style="width: 200px;"><img src="imagens/imgsCategorias/PedidoDeNamoro/img04.jpeg" alt=""></div>
+                    <div class="card"><img src="imagens/imgsCategorias/PedidoDeNamoro/img05.jpeg" alt=""></div>
+                    <div class="card"><img src="imagens/imgsCategorias/PedidoDeNamoro/img06.jpeg" alt=""></div>
+                    <div class="card"><img src="imagens/imgsCategorias/PedidoDeNamoro/img07.jpeg" alt=""></div>
+                    <div class="card"><img src="imagens/imgsCategorias/PedidoDeNamoro/img08.jpeg" alt=""></div>
                 </div>
-            </aside>
-            <aside>
-                <h3>Corpus Crist</h3>
-                <p>Primeiro Corpus Crist que passamos juntos como casal nossa, melhor dia de todos, apesar de algumas brigas, foi maravilhoso passar o dia todo junto contigo, e voltar todo queimado de sol kkk.</p>
-                <div class="content">
-                    <div class="carrossel">
-                        <div class="card"><img src="imagens/imgsCategorias/CorpusCrist/img01.jpeg" alt=""></div>
-                        <div class="card"><img src="imagens/imgsCategorias/CorpusCrist/img02.jpeg" alt=""></div>
-                        <div class="card"><img src="imagens/imgsCategorias/CorpusCrist/img03.jpeg" alt=""></div>
-                        <div class="card"><img src="imagens/imgsCategorias/CorpusCrist/img04.jpeg" alt=""></div>
-                        <div class="card"><img src="imagens/imgsCategorias/CorpusCrist/img05.jpeg" alt=""></div>
-                        <div class="card"><img src="imagens/imgsCategorias/CorpusCrist/img06.jpeg" alt=""></div>
-                        <div class="card"><img src="imagens/imgsCategorias/CorpusCrist/img07.jpeg" alt=""></div>
-                        
-                    </div>
+            </div>
+        </aside>
+
+        <aside>
+            <h3>Corpus Christi</h3>
+            <p>Nosso primeiro Corpus Christi como casal foi inesquecível. Teve risos, teve pequenas brigas, mas acima de tudo teve amor e a alegria de passar o dia inteiro ao seu lado. Voltamos queimados de sol, rodamos Rio de Contas todo kkk, saudade.</p>
+            <div class="content">
+                <div class="carrossel">
+                    <div class="card"><img src="imagens/imgsCategorias/CorpusCrist/img01.jpeg" alt=""></div>
+                    <div class="card"><img src="imagens/imgsCategorias/CorpusCrist/img02.jpeg" alt=""></div>
+                    <div class="card"><img src="imagens/imgsCategorias/CorpusCrist/img03.jpeg" alt=""></div>
+                    <div class="card"><img src="imagens/imgsCategorias/CorpusCrist/img04.jpeg" alt=""></div>
+                    <div class="card"><img src="imagens/imgsCategorias/CorpusCrist/img05.jpeg" alt=""></div>
+                    <div class="card"><img src="imagens/imgsCategorias/CorpusCrist/img06.jpeg" alt=""></div>
+                    <div class="card"><img src="imagens/imgsCategorias/CorpusCrist/img07.jpeg" alt=""></div>
                 </div>
-            </aside>
-            <aside>
-                <h3>Apesar da distância</h3>
-                <div class="content">
-                    <div class="carrossel">
-                        <div class="card"></div>
-                        <div class="card"></div>
-                        <div class="card"></div>
-                        <div class="card"></div>
-                        <div class="card"></div>
-                    </div>
+            </div>
+        </aside>
+
+        <aside>
+            <h3>Natal e Ano Novo</h3>
+            <p>No Natal, a vergonha bate forte (ainda não acostumei de ir na casa da tua tia), mas não existe nada mais especial do que passar essas datas com você. Entre abraços, risadas e até roubar brinquedo de criança juntos (saudade daquela arminha) ou jogar capoeira do nada, a virada do ano sempre se torna perfeito ao teu lado mô.</p>
+            <div class="content">
+                <div class="carrossel">
+                    <div class="card" style="width: 500px;"><img src="imagens/imgsCategorias/NatalAnoNovo/img01.jpeg" alt=""></div>
+                    <div class="card" style="width: 400px;"><img src="imagens/imgsCategorias/NatalAnoNovo/img02.jpeg" alt=""></div>
+                    <div class="card" style="width: 400px;"><img src="imagens/imgsCategorias/NatalAnoNovo/img03.jpeg" alt=""></div>
+                    <div class="card"><img src="imagens/imgsCategorias/NatalAnoNovo/img04.jpeg" alt=""></div>
+                    <div class="card" style="width: 200px;"><img src="imagens/imgsCategorias/NatalAnoNovo/img05.jpeg" alt=""></div>
+                    <div class="card" style="width: 200px;"><img src="imagens/imgsCategorias/NatalAnoNovo/img06.jpeg" alt=""></div>
+                    <div class="card"><img src="imagens/imgsCategorias/NatalAnoNovo/img07.jpeg" alt=""></div>
                 </div>
-            </aside>
-        </div>
+            </div>
+        </aside>
+
+        <aside>
+            <h3>Nossas Besteiras</h3>
+            <p>Ser besta sozinho já é divertido, mas ser besta ao lado de quem a gente ama é simplesmente perfeito. Cada piada interna, cada careta, cada momento engraçado é um pedaço da nossa história juntos.</p>
+            <div class="content">
+                <div class="carrossel">
+                    <div><img src="imagens/imgsCategorias/Bestajuntos/img01.jpeg" alt=""></div>
+                    <div><img src="imagens/imgsCategorias/Bestajuntos/img02.jpeg" alt=""></div>
+                    <div><img src="imagens/imgsCategorias/Bestajuntos/img03.jpeg" alt=""></div>
+                    <div style="width: 200px;"><img src="imagens/imgsCategorias/Bestajuntos/img04.jpeg" alt=""></div>
+                    <div style="width: 200px;"><img src="imagens/imgsCategorias/Bestajuntos/img05.jpeg" alt=""></div>
+                    <div style="width: 400px;"><img src="imagens/imgsCategorias/Bestajuntos/img06.jpeg" alt=""></div>
+                    <div style="width: 210px;"><img src="imagens/imgsCategorias/Bestajuntos/img07.jpeg" alt=""></div>
+                    <div><img src="imagens/imgsCategorias/Bestajuntos/img08.jpeg" alt=""></div>
+                    <div style="width: 200px;"><img src="imagens/imgsCategorias/Bestajuntos/img09.jpeg" alt=""></div>
+                    <div style="width: 500px;"><img src="imagens/imgsCategorias/Bestajuntos/img10.jpeg" alt=""></div>
+                    <div style="width: 500px;"><img src="imagens/imgsCategorias/Bestajuntos/img11.jpeg" alt=""></div>
+                    <div><img src="imagens/imgsCategorias/Bestajuntos/img12.jpeg" alt=""></div>
+                    <div><img src="imagens/imgsCategorias/Bestajuntos/img13.jpeg" alt=""></div>
+                    <div style="width: 400px;"><img src="imagens/imgsCategorias/Bestajuntos/img14.jpeg" alt=""></div>
+                    <div><img src="imagens/imgsCategorias/Bestajuntos/img15.jpeg" alt=""></div>
+                    <div style="width: 200px;"><img src="imagens/imgsCategorias/Bestajuntos/img16.jpeg" alt=""></div>
+                    <div><img src="imagens/imgsCategorias/Bestajuntos/img17.jpeg" alt=""></div>
+                    <div><img src="imagens/imgsCategorias/Bestajuntos/img18.jpeg" alt=""></div>
+                    <div><img src="imagens/imgsCategorias/Bestajuntos/img19.jpeg" alt=""></div>
+                    <div><img src="imagens/imgsCategorias/Bestajuntos/img20.jpeg" alt=""></div>
+                    <div><img src="imagens/imgsCategorias/Bestajuntos/img21.jpeg" alt=""></div>
+                </div>
+            </div>
+        </aside>
+</div>
+
     </main>
     <section>
         <h1>É isso minha princesa</h1>
 
-        <p>Meu amor, que essa lembrancinha seja um pedacinho do meu carinho para você ter sempre contigo, e poder relembrar nossos primeiros 2 anos juntos. Cada momento ao seu lado, é um presente que guardo no coração, e espero que, mesmo estando longe, você se lembre do quanto eu te amo e te quero mais que tudo. Obrigado por ser meu norte durante esse pouco tempo que estive ao seu lado e por me transformar em um homem e uma pessoa melhor. Não sei o que a vida guarda para nós dois a partir daqui, mas espero ter você ao meu lado para sempre. Conte comigo para tudo. <strong>Eu te amo</strong>.
+        <p>Meu amor, que essa lembrancinha seja um pedacinho do meu carinho para você ter sempre contigo, e poder relembrar nossos primeiros 2 anos juntos. Cada momento ao seu lado, é um presente que guardo no coração, e espero que, mesmo estando longe, você se lembre do quanto eu te amo e te quero mais que tudo. Obrigado por ser meu norte durante esse pouco tempo que estive ao seu lado e por me transformar em um homem e uma pessoa melhor. Não sei o que a vida guarda para nós dois a partir daqui, mas espero ter você comigo para sempre. Conte comigo para tudo. <strong>Eu te amo</strong>.
         </p>
 
         <div class="img" >
@@ -130,6 +166,6 @@
     <footer>
         <p>Feito de todo coração, de Geovane para sua <stong>futura esposa</stong></p>
     </footer>
-    <script src="main.js"></script>
+   
 </body>
 </html>
