--- a/projeto-2-anos-com-voce/quiz/layout.html
+++ b/projeto-2-anos-com-voce/quiz/layout.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Teste do Amor</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="../icon/heart_crown_princess_emoji_emo_icon_131636.ico" type="image/x-icon">
 </head>
 <body>
     <main>
